footerのリファクタリング前
footerをinline-block→flexに修正する前の状態

--- a/scss/Foundation/_variables.scss
+++ b/scss/Foundation/_variables.scss
@@ -1,6 +1,6 @@
 $font-size: 16px;
-$font-family: 'System UI', sans-serif;
-$font-color: #000;
+$font-family:'segoe ui', 'ヒラギノ角ゴ Pro W3', 'メイリオ', sans-serif;
+$font-color:#000;
 
 $background-color: #f4f4f4;
 $header-height: 70px;
