--- a/scss/Layout/_feature.scss
+++ b/scss/Layout/_feature.scss
@@ -14,7 +14,7 @@
         font-family: $font-family;
         font-size: 1em;
         color:white;
-        margin-bottom:10vh;
+        margin-bottom:5%;
         
     }
     &__card-container{
