--- a/scss/Object/Component/_button.scss
+++ b/scss/Object/Component/_button.scss
@@ -6,7 +6,7 @@
     padding-bottom:3em;
     &__ShowMore{
         display:block;
-        margin: 5vh auto;
+        margin: 3% auto;
 
         line-height: 25%;
         background-color: red;
@@ -15,8 +15,8 @@
         font-size: 1em;
         border: none;
         cursor: pointer;
-        width:10vw;
-        padding:1em;
+        width:auto;
+        padding:1em 2em;
         
         transition: all 0.3s ease;
     }
