--- a/scss/Object/Component/_footer-box.scss
+++ b/scss/Object/Component/_footer-box.scss
@@ -5,9 +5,9 @@
     width:auto;
     height:auto;
     padding:0;
-    margin:0 0;
+    margin:0 auto;
     display:inline-block;
-    
+
     
     &__image{
         width:50%;
