--- a/scss/Object/Project/_articletype.scss
+++ b/scss/Object/Project/_articletype.scss
@@ -1,15 +1,15 @@
 $font-color:#ffffff;
 
 .p-articletype {
+    width:auto;
+    height:10%;
     z-index: 10;
     display: inline-block;
     position: absolute;
     color: $font-color;
-    font-size:small;
+    font-size:x-small;
     background-size: 20px 30px;
-    
-
-    .PR{
+    &--PR{
         background-color: #646464; /* 赤色の背景 */
         color: $font-color; /* 白色の文字 */
         padding: 0.5em; /* パディングを追加 */
@@ -18,7 +18,7 @@ $font-color:#ffffff;
     }
 
     
-    .ACTIVITY{
+    &--ACTIVITY{
         background-color: #ffb20a; /* 赤色の背景 */
         color: $font-color; /* 白色の文字 */
         padding: 0.5em; /* パディングを追加 */
@@ -27,7 +27,7 @@ $font-color:#ffffff;
     }
 
     
-    .ITEM{
+    &--ITEM{
         background-color: #0dc15b; /* 赤色の背景 */
         color: $font-color; /* 白色の文字 */
         padding: 0.5em; /* パディングを追加 */
@@ -36,7 +36,7 @@ $font-color:#ffffff;
     }
 
     
-    .WELL-BEING{
+    &--WELL-BEING{
         background-color: #4d7ed8; /* 赤色の背景 */
         color: $font-color; /* 白色の文字 */
         padding: 0.5em; /* パディングを追加 */
@@ -45,7 +45,7 @@ $font-color:#ffffff;
     }
 
     
-    .ISSUE{
+    &--ISSUE{
         background-color: #009a0a; /* 赤色の背景 */
         color: $font-color; /* 白色の文字 */
         padding: 0.5em; /* パディングを追加 */
@@ -54,7 +54,7 @@ $font-color:#ffffff;
     }
 
     
-    .CULTURE{
+    &--CULTURE{
         background-color: #654732; /* 赤色の背景 */
         color: $font-color; /* 白色の文字 */
         padding: 0.5em; /* パディングを追加 */
@@ -63,7 +63,7 @@ $font-color:#ffffff;
     }
 
     
-    .LOVE{
+    &--LOVE{
         background-color: #a94949; /* 赤色の背景 */
         color: $font-color; /* 白色の文字 */
         padding: 0.5em; /* パディングを追加 */
