--- a/scss/Layout/_body.scss
+++ b/scss/Layout/_body.scss
@@ -1,71 +1,10 @@
 @use "../Foundation/variables" as *; // 変数をインポート
 
-.body{
+.l-body{
     width:100%;
     height:100%;
     margin: 0%;
-    .l-article{
-        &__title{
-            font-size: 2em;
-            font-family: $font-family;
-            text-align: center;
-        }
-        &__container {
-        position: relative;
-        box-sizing: border-box;
-        display:flex; /* フレックスコンテナを作成 */
-        gap:2vw;
-        flex-wrap: wrap; /* アイテムを折り返す */
-        flex-direction: row;
-        height:auto;
-        
-
-        /*中央寄りになるように左右を寄せてある*/
-        padding-left:30vw; 
-        padding-right:30vw;
-
-        .article {
-            display: inline-block;
-            width: 30vw;
-            height:40%;
-            flex:1 1 45%; /* 各記事の幅を50%に設定し、間隔を考慮 */
-            position: relative;
-            box-sizing: content;
-            justify-content:center; /* アイテム間にスペースを配置 */
-            align-items: center;
-            transition: transform 0.3s; /* ホバー時のアニメーション */
-
-            img{
-                display: inline;
-                height:auto; /* 高さに合わせる */
-                width: auto;
-                max-width: 100%;;
-            }
-            h3{
-                font-size:x-large;
-            }
-            p{
-                line-clamp: 3;
-                text-overflow: ellipsis;
-            }
-
-
-        }
-        .article:nth-child(7n){
-            flex:1 1 100%;
-            width: 60vw;
-            height:40%;
-
-        }
-
-
-
-
-
-        }
-    }
     
-
 }
 
 
