--- a/scss/Object/Project/_category.scss
+++ b/scss/Object/Project/_category.scss
@@ -13,8 +13,7 @@
             display:block;
             justify-content: center; /* アイテムを中央に配置 */
             /*中央寄りになるように左右を寄せてある*/
-            padding-left:35vw; 
-            padding-right:35vw;
+            padding:0 30%;
 
 
 
@@ -35,7 +34,7 @@
                     position: relative;
                     box-sizing: border-box;
                     display:flex; /* フレックスコンテナを作成 */
-                    gap:2vw;
+                    gap:2%;
                     flex-wrap: wrap; /* アイテムを折り返す */
                     flex-direction: row;
                     height:auto;
@@ -43,7 +42,7 @@
 
                     .c-CATEGORY-card{
                         display: inline-block;
-                        width: 30vw;
+                        width: 30%;
                         height:40%;
                         flex:1 1 45%; /* 各記事の幅を50%に設定し、間隔を考慮 */
                         position: relative;
@@ -51,7 +50,7 @@
                         justify-content:center; /* アイテム間にスペースを配置 */
                         align-items: center;
                         transition: transform 0.3s; /* ホバー時のアニメーション */
-
+                        margin:2%;
                         &__image{
                             display:inline;
                             height:auto; /* 高さに合わせる */
