--- a/scss/Object/Project/_hero.scss
+++ b/scss/Object/Project/_hero.scss
@@ -10,6 +10,7 @@
     grid-template-columns: 2fr 1fr;
     background:rgb(0, 0, 0);
     border-color: black;
+    font-family: $font-family;
 
     &__main{
         grid-row: 1 / 3;
