--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,22 +1,6 @@
-@use "./Foundation/variables";
+@use "Foundation";
 
-@use "./Layout/header";
-@use "./Layout/footer";
-@use "./Layout/main";
-@use "./Layout/body";
-@use "./Layout/feature";
-@use "./Layout/worldtopics";
-@use "./Layout/video";
+@use "Layout";
 
-
-
-@use "./Object/Component/button";
-@use "./Object/Component/footer-box";
-@use "./Object/Component/submit";
-@use "./Object/Component/videos";
-
-
-@use "./Object/Project/articletype";
-@use "./Object/Project/hero";
-@use "./Object/Project/category";
-@use "./Object/Project/swiper";
+@use "Object/Component";
+@use "Object/Project"
