footerの修正完了
footer done→ヒーローページの修正前

--- a/scss/Foundation/_variables.scss
+++ b/scss/Foundation/_variables.scss
@@ -8,3 +8,6 @@ $footer-height: 50px;
 $nav-background-color: rgb(25, 25, 25);
 $nav-text-color: rgb(255, 255, 255);
 $nav-hover-color: rgb(200, 200, 200);
+
+
+$change-view:992px;
