--- a/scss/Object/Component/_button.scss
+++ b/scss/Object/Component/_button.scss
@@ -26,8 +26,8 @@
     }
     
     &__submit{
-        width:5%;
-        display:inline;
+        width:auto;
+        display:inline-block;
         line-height: 25%;
         background-color: rgb(160, 160, 160);
         border-radius:10px;
