--- a/scss/Object/Component/_submit.scss
+++ b/scss/Object/Component/_submit.scss
@@ -8,6 +8,7 @@
    
     color: white;
     font-size: 1em;
+    font-family: $font-family;
     border: none;
     cursor: pointer;
     padding:0.75em 0;
