--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -9,6 +9,7 @@
     padding:1em 0;
     margin: auto;
     text-align: center;
+    font-family: $font-family;
     width:100%;
     height:auto;
     
@@ -17,16 +18,14 @@
         width: 10%;
         height:auto;
         margin:2% 0;
-
     }
+
     &__container{
         display:block;
         height:auto;
         width: auto;
-        padding:0 0;
+        padding:0;
         margin:2em 10em;  /* 中央寄せ */
-        text-align: center;
-        background-color: rgb(80, 2, 205);
 
 
         &__title{
@@ -57,6 +56,14 @@
             }
         }
 
+    }
+
+    &__contents{
+        display: flex;
+        margin:auto;
+        width:100%;
+        height:70%;
+        
     }
 
 }
