--- a/scss/Layout/index.css
+++ b/scss/Layout/index.css
@@ -102,6 +102,7 @@
   padding: 1em 0;
   margin: auto;
   text-align: center;
+  font-family: "segoe ui", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
   width: 100%;
   height: auto;
 }
@@ -115,10 +116,8 @@
   display: block;
   height: auto;
   width: auto;
-  padding: 0 0;
+  padding: 0;
   margin: 2em 10em; /* 中央寄せ */
-  text-align: center;
-  background-color: rgb(80, 2, 205);
 }
 .l-footer__container__title {
   font-family: "segoe ui", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
@@ -144,6 +143,12 @@
 .l-footer__container__link:hover {
   color: rgb(128, 106, 255);
   text-decoration: underline;
+}
+.l-footer__contents {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  height: 70%;
 }
 
 header {
