--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -1,14 +1,17 @@
-header{
+@use "../Foundation/variables";
+
+.l-header{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 
 
     nav {
         z-index:1000;
         display: inline;
         width: 100%;
-        height: 70px;
+        height: auto;
         background-color: rgb(25, 25, 25);
         text-align: center;
         color:rgb(255, 255, 255);
@@ -17,7 +20,7 @@ header{
         position:fixed;
         top:0;
         left:0;
-
+        transition: all 0.5s 0s ease-in;
         i {
             /*display: block;*/
             text-decoration: none;
@@ -48,3 +51,58 @@ header{
     }
 
 }
+
+@media (max-width:992px){
+.l-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(249, 85, 85);
+
+    nav {
+        z-index:1000;
+        display: inline;
+        width: 100%;
+        height:auto;
+        
+        text-align: center;
+        color:rgb(255, 255, 255);
+        padding-top: 5px;
+        box-sizing: border-box;
+        position:fixed;
+        top:0;
+        left:0;
+        transition: all 1s 0s ease;
+        i {
+            /*display: block;*/
+            text-decoration: none;
+            color: rgb(255, 255, 255);
+            margin-right:1vw;
+            margin-left:1vw;
+            font-size:120%;
+
+            transition: all ease  0.5s 0s;
+        }
+        i:hover{
+            transform:scale(1.5);
+        }
+    }
+
+    img{
+        margin-left:10vw;
+        margin-right:50vw;
+    }
+
+
+    ul{
+        display: flex;
+    }
+    li {
+        list-style: none;
+        transition:all 300ms 0 ease;
+    }
+
+}
+}
+
+
