--- a/scss/style.css
+++ b/scss/style.css
@@ -166,16 +166,16 @@
   height: 70%;
 }
 
-header {
+.l-header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-header nav {
+.l-header nav {
   z-index: 1000;
   display: inline;
   width: 100%;
-  height: 70px;
+  height: auto;
   background-color: rgb(25, 25, 25);
   text-align: center;
   color: rgb(255, 255, 255);
@@ -184,8 +184,9 @@ header nav {
   position: fixed;
   top: 0;
   left: 0;
+  transition: all 0.5s 0s ease-in;
 }
-header nav i {
+.l-header nav i {
   /*display: block;*/
   text-decoration: none;
   color: rgb(255, 255, 255);
@@ -194,21 +195,66 @@ header nav i {
   font-size: 120%;
   transition: all ease 0.5s 0s;
 }
-header nav i:hover {
+.l-header nav i:hover {
   transform: scale(1.5);
 }
-header img {
+.l-header img {
   margin-left: 10vw;
   margin-right: 50vw;
 }
-header ul {
+.l-header ul {
   display: flex;
 }
-header li {
+.l-header li {
   list-style: none;
   transition: all 300ms 0 ease;
 }
 
+@media (max-width: 992px) {
+  .l-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(249, 85, 85);
+  }
+  .l-header nav {
+    z-index: 1000;
+    display: inline;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    padding-top: 5px;
+    box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: all 1s 0s ease;
+  }
+  .l-header nav i {
+    /*display: block;*/
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    margin-right: 1vw;
+    margin-left: 1vw;
+    font-size: 120%;
+    transition: all ease 0.5s 0s;
+  }
+  .l-header nav i:hover {
+    transform: scale(1.5);
+  }
+  .l-header img {
+    margin-left: 10vw;
+    margin-right: 50vw;
+  }
+  .l-header ul {
+    display: flex;
+  }
+  .l-header li {
+    list-style: none;
+    transition: all 300ms 0 ease;
+  }
+}
 .l-main {
   margin: 0;
   padding: 0px;
